--- a/web_app/static/style/main.css
+++ b/web_app/static/style/main.css
@@ -8,10 +8,83 @@ body {
 	font-family: "JetBrains Mono";
 }
 
-input {
+input, select, option {
 	outline: none;
 	font-family: "JetBrains Mono";
 	border: 0;
+}
+
+button {
+	font-family: "JetBrains Mono";
+}
+
+.error_code {
+	position: absolute;
+	font-size: 80px;
+	width: 400px;
+	height: 90px;
+	left: calc(50% - 200px);
+	top: calc(50% - 45px);
+	text-align: center;
+}
+
+.error_msg {
+	position: absolute;
+	font-size: 12px;
+	color: #fff4;
+	width: 400px;
+	height: 150px;
+	left: calc(50% - 200px);
+	top: calc(50% + 50px);
+	text-align: center;
+	animation: shortcircuitfont 4s infinite;
+}
+
+@keyframes shortcircuitfont {
+	0% {
+		color: #fff4;
+	}
+	28% {
+		color: #fff4;
+	}
+	30% {
+		color: #fff8;
+	}
+	32% {
+		color: #fff4;
+	}
+	68% {
+		color: #fff4;
+	}
+	70% {
+		color: #fff8;
+	}
+	72% {
+		color: #fff4;
+	}
+	78% {
+		color: #fff4;
+	}
+	80% {
+		color: #fff8;
+	}
+	82% {
+		color: #fff4;
+	}
+}
+
+#toast {
+	position: fixed;
+  bottom: 30px;
+  right: 30px;
+  background: #36b;
+  color: #fff;
+  padding: 10px 20px;
+  border-radius: 5px;
+  display: none;
+  box-shadow: 0 2px 6px rgba(0,0,0,0.3);
+  font-size: 14px;
+  z-index: 9999;
 }
 
 .main_auth {
@@ -30,6 +103,11 @@ input {
 .main_auth.reg {
 	height: 540px;
 	top: calc(50% - 270px);
+}
+
+.main_auth.reg.error {
+	height: 200px;
+	top: calc(50% - 100px);
 }
 
 .main_auth label {
@@ -206,4 +284,616 @@ input {
 	100% {
 		transform: translateX(-3px);
 	}
+}
+
+#avatarModal {
+	position: fixed;
+	z-index: 9999999;
+	display: none;
+	inset: 0;
+	background: #0009;
+	justify-content: center;
+	align-items: center;
+}
+
+#cropImage {
+	max-width: 100%;
+	max-height: 100%;
+}
+
+.cropper-face.cropper-move {
+	border-radius: 50%;
+	border: 2px solid #36b;
+	opacity: 1;
+	background: #0000;
+}
+
+.avatarBlock {
+	background:#fff;
+	border-radius:10px;
+	width: 500px;
+	height: 500px;
+	margin: auto;
+}
+
+.cropButtons {
+	display: flex;
+	justify-content: space-between
+}
+
+#cropSave {
+	position: relative;
+	background: #36b;
+	color: #fff;
+	padding: 10px;
+	margin: 5px;
+	border-radius: 10px;
+	border: 0;
+	transition: background 0.3s;
+}
+
+#cropSave:hover {
+	background: #38e;
+	cursor: pointer;
+}
+
+#cropCancel {
+	background: #0000;
+	color: #36b;
+	text-decoration: underline;
+	border: 0;
+	padding: 10px;
+	margin: 5px;
+}	
+
+#cropCancel:hover {
+	color: #38e;
+	cursor: pointer;
+}
+
+.header {
+	position: fixed;
+	width: 100%;
+	height: 50px;
+	z-index: 999999;
+}
+
+.header .profile_menu {
+	display: none;
+	position: absolute;
+	width: 200px;
+	right: 20px;
+	top: 50px;
+}
+
+.header .profile_menu a {
+		display: block;
+    padding: 5px 10px;
+    color: #fff;
+    text-decoration: none;
+    background: #fff1;
+    margin: 5px 0;
+    border-radius: 5px;
+    text-align: center;
+    transition: background 0.3s;
+}
+
+.header .profile_menu a:hover {
+		background: #36b;
+}
+
+.header_btns {
+	position: absolute;
+	width: 900px;
+	height: 100%;
+	left: calc(50% - 450px);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.header_profile {
+	position: absolute;
+	width: 200px;
+	height: 100%;
+	right: 20px;
+	display: flex;
+	align-items: center;
+}
+
+.header_profile img {
+	width: 36px;
+	border-radius: 50%;
+	margin: 3px;
+}
+
+.header_profile img:hover {
+	filter: brightness(1.1);
+}
+
+.header_profile p {
+	margin: 0 0 0 10px;
+	color: #fff;
+	font-size: 14px;
+}
+
+.header_btns button, .header_btns a {
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	height: 30px;
+	margin: 5px;
+	padding: 0 15px;
+	background: #0000;
+	border: 0;
+	border-radius: 3px;
+	color: #fff;
+	text-decoration: none;
+	transition: background 0.3s;
+	font-size: 13px;
+}
+
+.header_btns button:hover, .header_btns a:hover {
+	cursor: pointer;
+	background: #fff2;
+}
+
+.header_btns button.active {
+	border-bottom: 3px solid #5af;
+}
+
+.main {
+	position: absolute;
+	width: 100%;
+	top: 50px;
+}
+
+.main .admin_panel, .main .rating_table, .main .main_form, .main .main_profile {
+	position: relative;
+	width: 900px;
+	left: calc(50% - 450px);
+}
+
+.admin_panel .header_btns {
+	position: relative;
+	height: 50px;
+}
+
+.admin_panel h1 {
+	display: inline;
+	font-size: 24px;
+	margin-right: 15px;
+}
+
+.admin_panel .title {
+	display: flex;
+	align-items: center;
+}
+
+.admin_panel .title a {
+	display: inline;
+	background: #36b;
+	color: #fff;
+	padding: 7px 10px;
+	margin: 5px;
+	border-radius: 5px;
+	border: 0;
+	font-size: 14px;
+	transition: background 0.3s;
+}
+
+.admin_panel .title a:hover {
+	background: #38e;
+	cursor: pointer;
+}
+
+.admin_main table, .rating_table table  {
+	width: 100%;
+	border: 1px solid #fff3;
+	border-collapse: collapse;
+  border-spacing: 0;  
+}
+
+.admin_main table td, .rating_table table td {
+	border: 1px solid #fff3;
+	text-align: center;
+}
+
+.admin_main table td a, .rating_table table td a {
+	color: #fff;
+}
+
+.admin_main table th, .rating_table table th {
+	background: #fff3;
+	border: 1px solid #fff3;
+}
+
+.admin_main table tr:hover, .rating_table table tr:hover {
+	background: #fff3;
+}
+
+.main_form label {
+	font-size: 11px;
+	color: #fff7;
+	margin: 5px 0;
+	text-align: left;
+}
+
+.main_form input, .main_form select {
+	position: relative;
+	height: 27px !important;
+	font-size: 16px;
+	border-radius: 10px;
+	text-align: left;
+	padding: 1px 10px;
+	background: #fff2;
+	color: #fff;
+	border: 0;
+	outline: none;
+	transition: background 0.1s;
+	box-sizing: border-box;
+}
+
+.main_form input:focus, .main_form select:focus {
+	background: #fff3;
+}
+
+.main_form input[type="submit"] {
+	background: #36b;
+	padding: 10px;
+	margin: 10px;
+	height: auto !important;
+	display: block;
+}
+
+.main_form input[type="submit"]:hover {
+	background: #38e;
+	cursor: pointer;
+}
+
+.main_form .flex_container {
+	display: flex;
+}
+
+.main_form .flex_container .col_block {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	margin: 10px;
+}
+
+.main_form .flex_container .col_block.w40 {
+	width: 40%;
+}
+
+.main_form .flex_container .col_block.w60 {
+	width: 60%;
+}
+
+.main_form .flex_container .col_block.w20 {
+	width: 20%;
+}
+
+.main_form .flex_container .col_block.w10 {
+	width: 10%;
+}
+
+.schedule-wrapper {
+  overflow-x: auto;
+  margin-top: 15px;
+}
+
+.schedule-table {
+  border-collapse: collapse;
+  width: 100%;
+  text-align: center;
+}
+
+.schedule-table th,
+.schedule-table td {
+  border: 1px solid #fff2;
+  padding: 5px;
+  color: #fff;
+}
+
+.schedule-table th {
+  background-color: #36b9;
+}
+
+.schedule-table td {
+  background-color: rgba(255,255,255,0.1);
+}
+
+.schedule-table input[type="checkbox"] {
+  width: 22px;
+  height: 22px;
+  accent-color: #36b;
+  cursor: pointer;
+  transform: scale(1.2);
+  margin: auto;
+  display: block;
+}
+
+.schedule-table td.highlight,
+.schedule-table th.highlight {
+  background-color: #38e;
+  transition: background 0.15s;
+}
+
+
+.rating_table .profile {
+	position: relative;
+	width: 300px;
+	left: 0;
+	height: 50px;
+	display: flex;
+	align-items: center;
+}
+
+.rating_table tr, .rating_table td, .rating_table th, .rating_table table {
+	border: 0 !important;
+}
+
+.rating_table .profile img {
+	width: 40px;
+	margin: 5px;
+	border-radius: 50%;
+}
+
+.rating_table .profile p {
+	margin: 0 10px;
+	text-align: left;
+}
+
+.rating_table a {
+	text-decoration: none;
+}
+
+tr#rating1, p#rating1 {
+	color: #ffd000;
+}
+
+tr#rating2, p#rating2 {
+	color: #9fafc2;
+}
+
+tr#rating3, p#rating3 {
+	color: #de6f1b;
+}
+
+img#rating1 {
+	border: 4px solid transparent;
+  background: linear-gradient(white, white) padding-box,
+              linear-gradient(to top, #ffd000, transparent) border-box;
+  border-radius: 50%;
+  margin: 1px;
+}
+
+img#rating2 {
+	border: 4px solid transparent;
+  background: linear-gradient(white, white) padding-box,
+              linear-gradient(to top, #9fafc2, transparent) border-box;
+  border-radius: 50%;
+  margin: 1px;
+}
+
+img#rating3 {
+	border: 4px solid transparent;
+  background: linear-gradient(white, white) padding-box,
+              linear-gradient(to top, #de6f1b, transparent) border-box;
+  border-radius: 50%;
+  margin: 1px;
+}
+
+path#rating1 {
+	fill: #ffd000;
+}
+
+path#rating2 {
+	fill: #9fafc2;
+}
+
+path#rating3 {
+	fill: #de6f1b;
+}
+
+.d_profile {
+	width: 300px;
+}
+
+.main_profile .flex_container img {
+	width: 80px;
+	margin-right: 20px;
+	border-radius: 50%;
+}
+
+.main_profile .flex_container {
+	display: flex;
+}
+
+.flex_container .info {
+	width: 500px;
+}
+
+.flex_container .little {
+	font-size: 12px;
+	color: #fff8;
+}
+
+.flex_container .white {
+	color: #fff;
+}
+
+.flex_container .rating {
+	text-align: right;
+}
+
+.flex_container .rating#rating1 {
+	color: #ffd000;
+}
+
+.flex_container .rating#rating2 {
+	color: #9fafc2;
+}
+
+.flex_container .rating#rating3 {
+	color: #de6f1b;
+}
+
+.main_profile .achiv_container {
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.main_profile .achiv_container .achiv_card {
+	position: relative;
+	height: 70px;
+	width: 290px;
+	background: #fff1;
+	margin: 0 10px 10px 0;
+	border-radius: 10px;
+	display: flex;
+	transition: transform 0.3s;
+}
+
+.main_profile .achiv_container .achiv_card:hover {
+	transform: scale(1.05);
+}
+
+.main_profile .achiv_container .achiv_card img {
+	height: 60px;
+	width: 60px;
+	border-radius: 0;
+	margin: 5px 10px;
+}
+
+.main_profile .achiv_container .achiv_card .info {
+	height: 70px;
+	left: 0;
+}
+
+.main_profile .achiv_container .achiv_card .info .title {
+		margin-top: 7px;
+    font-size: 14px;
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
+
+.main_profile .achiv_container .achiv_card .info .desc {
+		margin-top: 7px;
+    font-size: 12px;
+    color: #fff8;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: normal;
+}
+
+.main_form .flex_container .icon_upload {
+    position: relative;
+    width: 80px;
+    height: 80px;
+    left: 0;
+    border: 2px dashed #36b;
+    border-radius: 10px;
+    overflow: hidden;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background: #0004; /* полупрозрачный фон для визуальной подсветки */
+}
+
+.main_form .flex_container .icon_upload img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.main_form .flex_container .icon_upload button {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: #36b;
+    color: #fff;
+    border: none;
+    font-size: 12px;
+    cursor: pointer;
+    opacity: 0.8;
+    transition: opacity 0.2s;
+}
+
+.main_form .flex_container .icon_upload button:hover {
+    opacity: 1;
+}
+
+/* Модальное окно для иконки ачивки */
+.col_block #iconModal {
+    position: fixed;
+    z-index: 9999999;
+    display: none;
+    inset: 0;
+    background: #0009;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Изображение для обрезки иконки */
+.col_block #cropIconImage {
+    max-width: 100%;
+    max-height: 100%;
+}
+
+/* Блок с изображением */
+.col_block .iconBlock {
+    background: #fff;
+    border-radius: 10px;
+    width: 500px;
+    height: 500px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+/* Контейнер кнопок */
+.col_block .iconBlock .cropButtons {
+    display: flex;
+    justify-content: space-between;
+}
+
+/* Кнопки сохранения и отмены */
+.col_block #iconCropSave {
+    position: relative;
+    background: #36b;
+    color: #fff;
+    padding: 10px;
+    margin: 5px;
+    border-radius: 10px;
+    border: 0;
+    transition: background 0.3s;
+}
+.col_block #iconCropSave:hover {
+    background: #38e;
+    cursor: pointer;
+}
+
+.col_block #iconCropCancel {
+    background: #0000;
+    color: #36b;
+    text-decoration: underline;
+    border: 0;
+    padding: 10px;
+    margin: 5px;
+}
+.col_block #iconCropCancel:hover {
+    color: #38e;
+    cursor: pointer;
 }
