feature(favicon): add favicon

--- a/web_app/templates/achiv_form.html
+++ b/web_app/templates/achiv_form.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+    <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
 </head>
 <body>
     <div class="header">
