--- a/web_app/templates/auth.html
+++ b/web_app/templates/auth.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Авторизация</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
+    <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
 </head>
 <body>
     <div class="main_auth">
