--- a/web_app/templates/reg_link_form.html
+++ b/web_app/templates/reg_link_form.html
@@ -5,6 +5,7 @@
     <title>Создание ссылок</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
 </head>
 <body>
     <div class="header">
