--- a/web_app/templates/error.html
+++ b/web_app/templates/error.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Ошибка {{ code }}</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
+    <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
 </head>
 <body>
     <div class="error_code">
