--- a/web_app/templates/registration.html
+++ b/web_app/templates/registration.html
@@ -8,6 +8,7 @@
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
+    <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
 </head>
 <body>
     <div class="main_auth reg">
