--- a/web_app/templates/auth.html
+++ b/web_app/templates/auth.html
@@ -6,6 +6,13 @@
     <title>Авторизация</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
     <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
+
+    <meta property="og:title" content="IT-квантум | Страница авторизации">
+    <meta property="og:description" content="Сервис для рейтинговой системы учащихся IT-квантума">
+    <meta property="og:image" content="https://itkvantum.ru/static/img/og_image.png">
+    <meta property="og:url" content="https://itkvantum.ru/auth">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="IT-квантума">
 </head>
 <body>
     <div class="main_auth">
