--- a/web_app/templates/reg_link_form.html
+++ b/web_app/templates/reg_link_form.html
@@ -6,6 +6,13 @@
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
+
+    <meta property="og:title" content="IT-квантум | Создание ссылок {{ current_user.first_name }}">
+    <meta property="og:description" content="Сервис для рейтинговой системы учащихся IT-квантума">
+    <meta property="og:image" content="https://itkvantum.ru/static/img/og_image.png">
+    <meta property="og:url" content="https://itkvantum.ru/reg_link/form">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="IT-квантум">
 </head>
 <body>
     <div class="header">
