--- a/web_app/templates/registration_error.html
+++ b/web_app/templates/registration_error.html
@@ -9,6 +9,13 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css" rel="stylesheet"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
     <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
+
+    <meta property="og:title" content="IT-квантум | Ошибка регистрации">
+    <meta property="og:description" content="Сервис для рейтинговой системы учащихся IT-квантума">
+    <meta property="og:image" content="https://itkvantum.ru/static/img/og_image.png">
+    <meta property="og:url" content="https://itkvantum.ru/registration">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="IT-квантум">
 </head>
 <body>
     <div class="main_auth reg error">
