--- a/web_app/templates/achiv_form.html
+++ b/web_app/templates/achiv_form.html
@@ -8,6 +8,13 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.css"/>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/cropperjs/1.5.13/cropper.min.js"></script>
     <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
+
+    <meta property="og:title" content="IT-квантум | Создание достижения">
+    <meta property="og:description" content="Сервис для рейтинговой системы учащихся IT-квантума">
+    <meta property="og:image" content="https://itkvantum.ru/static/img/og_image.png">
+    <meta property="og:url" content="https://itkvantum.ru/achiv/form">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="IT-квантума">
 </head>
 <body>
     <div class="header">
