--- a/web_app/templates/error.html
+++ b/web_app/templates/error.html
@@ -5,6 +5,13 @@
     <title>Ошибка {{ code }}</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
     <link rel="icon" type="image/png" href="{{ static_versioned('img/favicon.png') }}" />
+
+    <meta property="og:title" content="IT-квантум">
+    <meta property="og:description" content="Сервис для рейтинговой системы учащихся IT-квантума">
+    <meta property="og:image" content="https://itkvantum.ru/static/img/og_image.png">
+    <meta property="og:url" content="https://itkvantum.ru/">
+    <meta property="og:type" content="website">
+    <meta property="og:site_name" content="IT-квантум">
 </head>
 <body>
     <div class="error_code">
