feature(secret quest + abort): add secret quest + new abort system fixed

--- a/web_app/static/style/main.css
+++ b/web_app/static/style/main.css
@@ -1,4 +1,5 @@
 @import url("jetbrains_fonts.css");
+@import url('https://fonts.googleapis.com/css2?family=Almendra+SC&display=swap');
 
 body {
 	background: #101214;
@@ -981,4 +982,68 @@ path#rating3 {
 .ratingControls {
 	display: flex;
 	justify-content: center;
+}
+
+.quest_block {
+	position: absolute;
+	width: 400px;
+	height: 350px;
+	background: #fff1;
+	border-radius: 10px;
+	border: 2px solid #ffd000;
+	top: calc(50% - 250px);
+	left: calc(50% - 200px);
+}
+
+.quest_block p {
+	font-size: 13px;
+	margin: 15px;
+}
+
+.quest_block h2 {
+	color: #ffd000;
+	font-size: 30px;
+	margin: 15px;
+	font-family: "Almendra SC";
+	text-align: center;
+}
+
+.quest_block form {
+	margin: 15px;
+}
+
+.quest_block input {
+	margin: 5px;
+	background: #fff1;
+	color: #fff;
+	width: 320px;
+}
+
+.quest_block input[type="submit"] {
+	position: absolute;
+	padding: 10px;
+	background: #ffd000;
+	color: #111;
+	margin: 0;
+	bottom: 10px;
+	right: 10px;
+	border-radius: 10px;
+	width: 150px;
+	transition: background 0.3s;
+}
+
+.quest_block input[type="submit"]:hover {
+	background: #fff222;
+	cursor: pointer;
+}
+
+.quest_block .flash {
+	position: absolute;
+	bottom: 10px;
+	left: 10px;
+	width: 200px;
+	margin: 0;
+	font-size: 10px;
+	color: #d22;
+	animation: flash_error 0.5s;
 }
