--- a/web_app/static/style/main.css
+++ b/web_app/static/style/main.css
@@ -360,6 +360,7 @@ button {
 	position: fixed;
 	width: 100%;
 	height: 50px;
+	background: #1119;
 	z-index: 999999;
 }
 
@@ -393,7 +394,7 @@ button {
 	height: 100%;
 	left: calc(50% - 450px);
 	display: flex;
-	justify-content: center;
+	justify-content: left;
 	align-items: center;
 }
 
@@ -437,6 +438,7 @@ button {
 	text-decoration: none;
 	transition: background 0.3s;
 	font-size: 13px;
+	backdrop-filter: blur(200px);
 }
 
 .header_btns button:hover, .header_btns a:hover {
@@ -1046,4 +1048,85 @@ path#rating3 {
 	font-size: 10px;
 	color: #d22;
 	animation: flash_error 0.5s;
+}
+
+@media (max-width: 920px) {
+
+	.none_display_m {
+		display: none;
+	}
+
+	.main_auth {
+		width: 100%;
+		left: 0;
+	}
+
+	.main {
+		width: 100%;
+		left: 0;
+	}
+
+	.main .admin_panel, .main .rating_table, .main .main_form, .main .main_profile {
+		width: 100%;
+		left: 0;
+	}
+
+	.header_btns {
+		width: 100%;
+		left: 0;
+	}
+
+	.header_profile p {
+		display: none;
+	}
+
+	.header_profile {
+		width: 50px;
+	}
+
+	.rating_table .profile {
+		width: auto;
+		margin-left: 20px;
+	}
+
+	.rating_table th {
+		padding: 5px;
+		font-size: 12px;
+	}
+
+	h1, h2 {
+		margin-left: 10px;
+		margin-bottom: 10px;
+	}
+
+	.main_profile .flex_container {
+		align-items: center;
+    flex-direction: column;
+	}
+
+	.main_profile .flex_container .avatar, .main_profile .flex_container .your_avatar {
+		width: 100px;
+		height: 100px;
+	}
+
+	.flex_container .info {
+		width: 95%;
+		text-align: center;
+	}
+
+	.flex_container .rating {
+		margin-top: 20px;
+		width: 95%;
+		text-align: center;
+		font-size: 12px;
+	}
+
+	.main_profile .achiv_container .achiv_card {
+		width: 95%;
+		margin: 2.5%;
+	}
+
+	.main_auth.reg .col2_reg .col_reg input {
+		width: 100%;
+	}
 }
