--- a/web_app/templates/dashboard.html
+++ b/web_app/templates/dashboard.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Панель управления</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
