--- a/web_app/templates/profile.html
+++ b/web_app/templates/profile.html
@@ -9,6 +9,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{{ user.last_name }} {{ user.first_name }}</title>
     <link rel="stylesheet" type="text/css" href="{{ static_versioned('style/main.css') }}">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
